--- a/reservation.css
+++ b/reservation.css
@@ -263,15 +263,18 @@ a:link, a:hover, a:visited, a:active {
 
 /* MOVIE Theater Selection*/
 .movie_info_container{
+    flex:1;
+    flex-basis: 0;
     display: flex;
-    flex-direction: column;
+    align-self: stretch;
+    flex-direction: row;
     align-content: stretch;
     margin-top: 50px;
 }
 
 .movie_theater_container .reserv_title{
     align-self: flex-start;
-    width: 300px;
+    width: 305px;
     background-color: rgb(106,110,112);
     color: white;
     font-weight: bold;
@@ -286,11 +289,12 @@ a:link, a:hover, a:visited, a:active {
     display: flex;
     background-color: rgb(225,209,209);
     flex-direction: column;
+    flex-grow: 0;
 }
 
 .movie_theater_box{
     display: flex;
-    margin: 0px 8px 8px 8px;
+    margin: 0px 10px 8px 12px;
     background-color: white;
     flex-direction: row;
 }
@@ -321,4 +325,46 @@ a:link, a:hover, a:visited, a:active {
     font-size: 1.15rem;
     color: rgb(106,110,112);
     padding : 8px 8px 8px 12px
+}
+
+
+/* Movie date container */
+.movie_date_container{
+    flex-grow: 10;
+}
+.movie_date_container .reserv_title{
+    align-self: flex-start;
+    flex:1;
+    background-color: rgb(106,110,112);
+    color: white;
+    font-weight: bold;
+    padding: 4px 4px 4px 4px;
+    text-align: center;
+}
+
+
+/* Calender */
+.movie_calender_container{
+    height: 240px;
+    background-color: rgb(225,209,209);
+}
+
+.movie_calender_box{
+    height: 240px;
+    background-color: white;
+    margin-right: 12px;
+}
+
+
+
+/* Time */
+.movie_time_container{
+    height: 220px;
+    background-color: rgb(225,209,209);
+}
+
+.movie_time_box{
+    height: 180px;
+    background-color: white;
+    margin-right: 12px;
 }
