--- a/reservation.css
+++ b/reservation.css
@@ -1,12 +1,30 @@
 @import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-
+html{
+    width: 100%; height: 100%;
+}
 body{ 
     width: 70%;
+    height: 100%;
     display: flex;
     margin: 50px auto;
     flex-direction: column;
 }
+/* 배경에 투명도 image 
+.container::after{
+    background-image:url("./img/background1.jpg");
+    top:0;
+    left:0;
+    position:absolute;
+    background-size: 100%;
+    opacity:0.2!important;
+    filter:alpha(opacity=50);
+    z-index:-1;
+    content:"";
+    width:100%;
+    height:100%;
+}*/
+
 /* 스크롤바 색상 */
 ::-webkit-scrollbar{width: 16px;}
 ::-webkit-scrollbar-track {background-color:rgb(241,241,241);}
@@ -42,15 +60,16 @@ a:link, a:hover, a:visited, a:active {
 }
 /* /Header */
 
-/* Body */
+/* Body */ /*border: 1px dotted gray;*/
 .container{
-    border: 1px dotted gray;
+    height: 100%;
     display: flex;
     margin-top: 50px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 
 /* Login */
 .login_form{
@@ -163,8 +182,8 @@ a:link, a:hover, a:visited, a:active {
     padding: 20px 10px 20px 10px;
     overflow:scroll;
     overflow-x: hidden;
+    background-color: rgb(255, 255, 255);
 }
-
 
 
 /* Movie rate list icon */
@@ -282,9 +301,6 @@ a:link, a:hover, a:visited, a:active {
     text-align: center;
 }
 
-
-
-
 .movie_theater_container{
     display: flex;
     background-color: rgb(225,209,209);
@@ -298,6 +314,7 @@ a:link, a:hover, a:visited, a:active {
     background-color: white;
     flex-direction: row;
 }
+
 
 .movie_theater_area_list{
     height: 400px;
@@ -354,7 +371,6 @@ a:link, a:hover, a:visited, a:active {
     background-color: white;
     margin-right: 12px;
 }
-
 
 
 /* Time */
