add Event Listener on theater area lists Only available area

--- a/reservation.css
+++ b/reservation.css
@@ -343,15 +343,15 @@ a:link, a:hover, a:visited, a:active {
     padding: 10px;
 }
 
-.movie_theater_area_list li.selected{
+.movie_theater_area_list li a.selected{
     background-color: rgb(245, 147, 147);
 }
 
 .movie_theater_area_list li .unavailable {
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(245, 243, 243);
 }
 .movie_theater_area_list li .unavailable span{
-    color:rgb(226, 226, 226);
+    color:rgb(238, 236, 236);
 }
 
 .movie_theater_area_detail_list select option{
