--- a/reservation.css
+++ b/reservation.css
@@ -386,13 +386,13 @@ a:link, a:hover, a:visited, a:active {
 
 /* Calender */
 .movie_calender_container{
-    height: 240px;
+    height: 260px;
     background-color: var(--point-color);
 }
 
 .movie_calender_box{
     display: flex;
-    height: 210px;
+    height: 87%;
     background-color: var(--box-color);
     margin-right: 12px;
     align-content: center;
@@ -403,15 +403,26 @@ a:link, a:hover, a:visited, a:active {
 /* Month */
 .month_box{
     flex:2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    
 }
 
 .month_box select{
-    flex-shrink: 10;
+    align-self: center;
+    border: 1px dotted pink;
+   
     min-width: 20px;
-    max-width: 100px;
+    max-width: 80px;
     width: 80%;
-    height: 85%;
-    margin:20px 10px 20px 35px;
+    height: 80%;
+    /* margin:25px 10px 25px 35px; */
+
+    margin: 10px;
+
+
     text-align: center;
     overflow-y: auto;
 
@@ -445,16 +456,21 @@ a:link, a:hover, a:visited, a:active {
 
 /* Date */
 .date_box{
-    flex-shrink: 1;
+    flex-shrink: 10;
     flex:6;
+    display: flex;    
+    flex-direction: row;
+    justify-content: center;
 }
 
 .date_box table{
-    margin:20px;
+    /* margin:20px; */
+    align-self: center;
     width: 80%;
     height:80%;
     border:1px solid #e2dfdf;
     text-align:center;
+    margin-left: 0px;
 
 }
 
@@ -462,6 +478,7 @@ a:link, a:hover, a:visited, a:active {
     padding : 2px 0px 2px 0px;
     background-color: rgb(247, 208, 207);
     color:rgba(138, 15, 42, 0.527);
+    font-weight: bold;
     
 }
 
