--- a/reservation.css
+++ b/reservation.css
@@ -580,7 +580,7 @@ button.submit:hover{
 
  /* The Modal (background) */
  .modal {
-    display: none; /* Hidden by default */
+    display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
@@ -588,17 +588,17 @@ button.submit:hover{
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #242333;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */                          
+    width: 50%; /* Could be more or less, depending on screen size */ 
+    height: 60%;                         
 }
 /* The Close Button */
 .close {
