--- a/reservation.css
+++ b/reservation.css
@@ -587,7 +587,6 @@ button.submit:hover{
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
@@ -598,12 +597,16 @@ button.submit:hover{
     padding: 20px;
     border: 1px solid #888;
     width: 50%; /* Could be more or less, depending on screen size */ 
-    height: 60%;                         
+    height: 60%;    
+    display: flex;      
+    flex-direction: column;    
+    color: white;      
+    align-items: center;     
 }
 /* The Close Button */
 .close {
     color: #aaa;
-    float: right;
+    align-self: flex-end;
     font-size: 28px;
     font-weight: bold;
 }
@@ -614,3 +617,68 @@ button.submit:hover{
     cursor: pointer;
 }
 
+
+/* Modal contents */
+.seats_movie_title{
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+}
+.seats_movie_title #movie_title{
+    font-size: 1rem;
+    background-color: white;
+    color: #242332;
+    font-family:'Hanna', serif;
+    border-radius: 4px;
+    padding:5px 12px 5px 12px;
+    margin: 0px 5px 0px 5px;
+}
+
+.seats_person{
+    display: flex;
+}
+.seats_person span{
+    margin-right: 10px;
+    padding-top:5px;
+}
+
+.seats_person button{
+    width: 28px;
+    background-color: #242332;
+    border: 1.5px solid white;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    border-radius: 4px;
+    margin: 0px 2px 0px 2px;
+}
+
+.sets_person_box{
+    display: flex;
+    margin: 0px 30px 0px 30px;
+}
+
+.seats_person .personnel{
+    width: 28px;
+    background-color: white;
+    color: #242332;
+    font-weight: bold;
+    font-size: 1.2rem;
+    border-radius: 4px;
+    text-align: center;
+}
+
+
+.seats_box{
+    height:55%;
+}
+
+.fee{
+    margin: 10px 0px 10px 0px;
+}
+
+.modal_select_button{
+    width: 100px;
+    height: 30px;
+    font-size: 1.1rem;
+    font-family: 'Hanna','Serif';
+}
