--- a/reservation.css
+++ b/reservation.css
@@ -580,7 +580,7 @@ button.submit:hover{
 
  /* The Modal (background) */
  .modal {
-    display: block; /* Hidden by default */
+    display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
