--- a/src/main/resources/templates/movies/movie_create.html
+++ b/src/main/resources/templates/movies/movie_create.html
@@ -12,7 +12,7 @@
             <form role="form" th:action="@{/movie/create}" th:object="${movie}" method="post">
                 <div>
                     <label th:for="name">Name : </label>
-                    <input type="text" th:field="*{name}" size="50" placeholder="제목 입력란" />
+                    <input type="text" th:field="*{name}" size="50" placeholder="제목 입력란" /><br/>
                 </div>
                 <button type="submit">저장</button>
             </form>
